files/L7-features-wave_point_proxy/Fault_Injection/vs_web-api.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web-api-gw-vs
spec:
  hosts:
  - "istioexplained.io"
  gateways:
  - web-api-gateway
  http:
  - fault:
      delay:
        fixedDelay: 5s
        percentage:
          value: 100
    match:
    - headers:
        user:
          exact: Amy
    route:
    - destination:
        host: web-api.default.svc.cluster.local
        port:
          number: 8080
  - route:
    - destination:
        host: web-api.default.svc.cluster.local
        port:
          number: 8080
